2023/04/03 scrollbar design fix

--- a/css/style.css
+++ b/css/style.css
@@ -360,15 +360,24 @@ button:active{
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
-    /* justify-content: start; */
+    justify-content: start;
     align-items: center;
     width: 100%;
     height: 500px;
     overflow-x: scroll;
 }
-/* .main-wrapper .cardArea::-webkit-scrollbar-track{
-    background: yellow;
-} */
+
+.cardArea::-webkit-scrollbar{
+    height: 14px;
+}
+.cardArea::-webkit-scrollbar-track{
+    border-radius: 100px;
+    background-color: #203d5f54;
+}
+.cardArea::-webkit-scrollbar-thumb{
+    border-radius: 100px;
+    background-color: #203d5fc7;
+}
 .card-item{
     /* width: 270px; */
     position: relative;
